# msos-autobuilder

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.codex/: config.toml
config/: codex_host.example.yaml  codex_shadow_manifest.example.yaml  inventory_rules.v1.yaml  persistent_host.example.yaml  rollback_witness.enabled  update_manifest.example.yaml
docs/: ARCHITECTURE.md  AUTOBUILDER_OPERATING_MANUAL_V1.md  BOUNDED_AUTO_MERGE_AND_CLEANUP_V1.md  CANDIDATE_INTEGRATION_GATE_V1.md  CODEX_EXECUTION_BUDGETS_V1.md  CONTINUOUS_IMPROVEMENT_PLANNER_V1.md  CONTROLLED_DRAFT_PUBLISHER_V1.md  CURRENT_STATE_AND_CODEX_NEXT_2026-07-13.md  FAIL_SAFE_SELF_UPDATE_SUPERVISOR_V1.md  PARALLEL_RUNTIME_V1.md  PERSISTENT_WINDOWS_HOST_V1.md  SELF_UPDATE_RELEASE_CONTROL_V1.md  WINDOWS_CODEX_HOST_V1.md
results/: README.md
scripts/: bootstrap_windows_codex_host.ps1  bootstrap_windows_codex_host_auto.ps1  check_frozen_evaluation_candidate.py  check_frozen_evaluation_schema_compatibility.py  configure_windows_revision_candidate_gate.ps1  install_windows_candidate_gate.ps1  install_windows_controlled_publisher.ps1  install_windows_persistent_host.ps1  install_windows_refill_controller.ps1  install_windows_results_relay.ps1  install_windows_revision_loop.ps1  install_windows_revision_pipeline.ps1  install_windows_self_update_supervisor.ps1  invoke_windows_self_update.ps1  managed_release_health_probe.py  repair_windows_candidate_gate.ps1  repair_windows_revision_identity_witness.ps1  rollback_windows_self_update.ps1  run_windows_managed_service.ps1  uninstall_windows_persistent_host.ps1  update_windows_stable_supervisor_bootstrap.ps1  windows_self_update_task_control.ps1
tests/: conftest.py  test_build_next.py  test_candidate_gate.py  test_candidate_gate_revisions.py  test_candidate_gate_windows.py  test_codex_cli.py  test_codex_shadow.py  test_continuous_improvement.py  test_contracts.py  test_controlled_publisher.py  test_deliberate_rollback_witness.py  test_frozen_evaluation_identity_witness.py  test_git_clone_backend.py  test_inventory.py  test_lanes.py  test_leases.py  test_persistent_host.py  test_plan_only_backend.py  (+23 more)
(+120 files in other folders)
