[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "msos-autobuilder"
version = "0.1.0"
description = "Independent build-factory infrastructure for Market Structure OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/msos_autobuilder/candidate_gate.py" = ["E501"]
"tests/test_candidate_gate.py" = ["E501"]
"src/msos_autobuilder/revision_loop.py" = ["E501"]
"tests/test_revision_loop.py" = ["E501"]
"src/msos_autobuilder/controlled_publisher.py" = ["E501", "I001"]
"tests/test_controlled_publisher.py" = ["E501", "I001"]
"src/msos_autobuilder/self_update_evidence_relay.py" = ["E501"]
"src/msos_autobuilder/self_update_evidence_notify.py" = ["E501"]
"tests/test_self_update_evidence_relay.py" = ["E501"]
"tests/test_self_update_evidence_notify.py" = ["E501"]
"tests/test_self_update_evidence_workflow.py" = ["E501"]
"tests/test_self_update_evidence_windows.py" = ["E501"]
